argocd/manifests/ingress/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: vault
spec:
  gatewayClassName: envoy
  listeners:
    - name: vault-https
      protocol: HTTPS
      port: 443
      hostname: vault.j6js.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: argocd-https
      protocol: HTTPS
      port: 443
      hostname: argo.j6js.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: authentik-https
      protocol: HTTPS
      port: 443
      hostname: auth.j6js.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: authentik-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
